testfx/errors/error_tests/err_18_empty_index.fx
// 测试18: 索引访问错误 - 空索引
arr := [1, 2, 3]
x := arr[]
